--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<h2> Mis ejercicios de Introducción HTML </h2>
 
-	<p><ul><li><a href="file:///G:/TIC%202.1/ejercicios_HTML/html-ejerc1-intro.html"> html-ejerc1.html </a></li></p>
+	<p><ul><li><a href="ejercicios_HTML/html-ejerc1-intro.html"> html-ejerc1.html </a></li></p>
 	<p><li><a href="html-ejerc2-poema.html"> html-ejerc2.html </a></li></p>
 	<p><li><a href="html-ejerc3-enfasis.html"> html-ejerc3.html </a></li></p>
 	<p><li><a href="html-ejerc4-listas.html"> html-ejerc4.html </a></li></p>
