--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 	<h2> Mis ejercicios de Introducción HTML </h2>
 
 	<p><ul><li><a href="ejercicios_HTML/html-ejerc1-intro.html"> html-ejerc1.html </a></li></p>
-	<p><li><a href="TIC 2.1/ejercicios_HTML/html-ejerc2-poema.html"> html-ejerc2.html </a></li></p>
-	<p><li><a href="html-ejerc3-enfasis.html"> html-ejerc3.html </a></li></p>
-	<p><li><a href="html-ejerc4-listas.html"> html-ejerc4.html </a></li></p>
-	<p><li><a href="html-ejerc5-Práctica.html">html-ejerc5.html</a></li></p>
-	<p><li><a href="html-ejerc5-utf-8.html">html-ejerc5-utf-8.html</a></li></p>
-	<p><li><a href="html-ejerc6-img.html">html-ejerc6-img.html</a></li></p>
-	<p><li><a href="html-ejerc7-viaje.html">ejerc7-viaje.html</a></li></p></ul>
+	<p><li><a href="ejercicios_HTML/html-ejerc2-poema.html"> html-ejerc2.html </a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc3-enfasis.html"> html-ejerc3.html </a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc4-listas.html"> html-ejerc4.html </a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc5-Práctica.html">html-ejerc5.html</a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc5-utf-8.html">html-ejerc5-utf-8.html</a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc6-img.html">html-ejerc6-img.html</a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc7-viaje.html">ejerc7-viaje.html</a></li></p></ul>
 
 	<h2> Web hosting </h2>
