--- a/index.html
+++ b/index.html
@@ -32,3 +32,11 @@
 	<p><li><a href="ejercicios_HTML/html-ejerc7-viaje.html">ejerc7-viaje.html</a></li></p></ul>
 
 	<h2> Web hosting </h2>
+		<p> <strong><em>Un web hosting </em></strong> es lo que en español se podría definir como alojamiento de una web, en el que todos los documentos alojados serán 
+		accesibles para cualquier usuario de la web en cualquier momento. Se podría decir que se alquila un espacio de un servidor, que almacena dichos documentos y datos
+		de tu web para que funciones perfectamente.</p>
+ 
+		<p> En mi caso he usado github (<a href="https://github.com"> github </a> ) y mi página web es: <a href="https://nahiarasanchez.github.io/"> Trabajo TICII </a></p>
+
+</body>
+</html>
