Cambié el estilo y html

--- a/ejercicios_HTML/html-ejerc8-color.html
+++ b/ejercicios_HTML/html-ejerc8-color.html
@@ -5,9 +5,28 @@
 
 	<meta charset="utf-8">
 	<title> Biología </title>
+
+	<style>
+	
+	h1 {
+		color: MediumSeaGreen ;
+	}
+
+	p {
+		color: red ;
+	}
+	
+	body { 
+		background-color: rgb(159, 169, 194) ; 
+	}
+
+	</style>
+
 </head>
 
 <body>
+
+	
 
 	<p> <h1> Los cromosomas </h1> </p>
 
