--- a/ejercicios_HTML/index.html
+++ b/ejercicios_HTML/index.html
@@ -22,13 +22,23 @@
 
 	<h2> Mis ejercicios de Introducción HTML </h2>
 
-	<p><ul><li><a href="html-ejerc1-intro.html"> html-ejerc1.html </a></li></p>
-	<p><li><a href="html-ejerc2-poema.html"> html-ejerc2.html </a></li></p>
-	<p><li><a href="html-ejerc3-enfasis.html"> html-ejerc3.html </a></li></p>
-	<p><li><a href="html-ejerc4-listas.html"> html-ejerc4.html </a></li></p>
-	<p><li><a href="html-ejerc5-Práctica.html">html-ejerc5.html</a></li></p>
-	<p><li><a href="html-ejerc5-utf-8.html">html-ejerc5-utf-8.html</a></li></p>
-	<p><li><a href="html-ejerc6-img.html">html-ejerc6-img.html</a></li></p>
-	<p><li><a href="html-ejerc7-viaje.html">ejerc7-viaje.html</a></li></p>
+	<p><ul><li><a href="ejercicios_HTML/html-ejerc1-intro.html"> html-ejerc1.html </a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc2-poema.html"> html-ejerc2.html </a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc3-enfasis.html"> html-ejerc3.html </a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc4-listas.html"> html-ejerc4.html </a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc5-Práctica.html">html-ejerc5.html</a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc5-utf-8.html">html-ejerc5-utf-8.html</a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc6-img.html">html-ejerc6-img.html</a></li></p>
+	<p><li><a href="ejercicios_HTML/html-ejerc7-viaje.html">ejerc7-viaje.html</a></li></p></ul>
 
 	<h2> Web hosting </h2>
+		<p> <strong><em>Un web hosting </em></strong> es lo que en español se podría definir como alojamiento de una web, en el que todos los documentos alojados serán 
+		accesibles para cualquier usuario de la web en cualquier momento. Se podría decir que se alquila un espacio de un servidor, que almacena dichos documentos y datos
+		de tu web para que funciones perfectamente.</p>
+ 
+		<p> En mi caso he usado github (<a href="https://github.com"> github </a> ) y mi página web es: <a href="https://nahiarasanchez.github.io/"> Trabajo TICII </a></p>
+
+</body>
+</html>
+ 
+
