--- a/index.html
+++ b/index.html
@@ -1,42 +1,92 @@
 <DOCTYPE html>
-<html>
+	<html>
 
-<head>
-	<meta charset="utf-8">
-	<title>Mi trabajo en TICII  </title>
-</head>
+	<head>
+		<meta charset="utf-8">
+		<title>Mi trabajo en TICII </title>
+		<link href="style.css" rel="stylesheet" type="text/css" />
+	</head>
 
-<body>
+	<body>
 
-	<h1> Mi trabajo en TICII + Nahiara Sánchez García </h1>
-	
-	<p> Yo soy Nahiara Sánchez García y estoy cursando segundo de bachillerato en la clase 2.1, en la modalidad de ciencias
-		de la salud. Tengo dos hermanos pequeños, mi hermano tiene 14 años y está cursando tercero de la ESO, y mi hermanda
-		tiene 11 y está en sexto de primaria, ambos en las Dominicas. Tenemos además un perrito llamado Coco, al que tratamos 
-		como uno más de la familia. </p>
+		<div id="presentacion">
+			<h1> Mi trabajo en TICII + Nahiara Sánchez García </h1>
 
-	<p> Personalmente no tengo muy claro lo que me gustaría estudiar después, pero si tengo varias opciones (algunas no tienen nada que 
-		ver entre sí): Veterinaria, algo de diseño grafico/de interiores..., enfermería... Pero sí tengo claro de lo que me gustaría
-		trabajar después de haber estudiado: Policía especializada en la Brigada Canina, pues me encantaría poder trabajar de la mano de 
-		mis mascotas.
+			<p> Yo soy Nahiara Sánchez García y estoy cursando segundo de bachillerato en la clase 2.1, en la modalidad de ciencias
+				de la salud. Tengo dos hermanos pequeños, mi hermano tiene 14 años y está cursando tercero de la ESO, y mi hermanda tiene
+				11 y está en sexto de primaria, ambos en las Dominicas. Tenemos además un perrito llamado Coco, al que tratamos como
+				uno más de la familia. </p>
 
-	<h2> Mis ejercicios de Introducción HTML </h2>
+			<p> Personalmente no tengo muy claro lo que me gustaría estudiar después, pero si tengo varias opciones (algunas no tienen
+				nada que ver entre sí): Veterinaria, algo de diseño grafico/de interiores..., enfermería... Pero sí tengo claro de lo
+				que me gustaría trabajar después de haber estudiado: Policía especializada en la Brigada Canina, pues me encantaría poder
+				trabajar de la mano de mis mascotas.
+		</div>
 
-	<p><ul><li><a href="ejercicios_HTML/html-ejerc1-intro.html"> html-ejerc1.html </a></li></p>
-	<p><li><a href="ejercicios_HTML/html-ejerc2-poema.html"> html-ejerc2.html </a></li></p>
-	<p><li><a href="ejercicios_HTML/html-ejerc3-enfasis.html"> html-ejerc3.html </a></li></p>
-	<p><li><a href="ejercicios_HTML/html-ejerc4-listas.html"> html-ejerc4.html </a></li></p>
-	<p><li><a href="ejercicios_HTML/html-ejerc5-Práctica.html">html-ejerc5.html</a></li></p>
-	<p><li><a href="ejercicios_HTML/html-ejerc5-utf-8.html">html-ejerc5-utf-8.html</a></li></p>
-	<p><li><a href="ejercicios_HTML/html-ejerc6-img.html">html-ejerc6-img.html</a></li></p>
-	<p><li><a href="ejercicios_HTML/html-ejerc7-viaje.html">ejerc7-viaje.html</a></li></p></ul>
+		<div id="html"  class="titulo2">
+			<h2> Mis ejercicios de Introducción HTML </h2>
 
-	<h2> Web hosting </h2>
+			<p>
+				<ul>
+					<li><a href="ejercicios_HTML/html-ejerc1-intro.html"> html-ejerc1.html </a></li>
+			</p>
+			<p>
+				<li><a href="ejercicios_HTML/html-ejerc2-poema.html"> html-ejerc2.html </a></li>
+			</p>
+			<p>
+				<li><a href="ejercicios_HTML/html-ejerc3-enfasis.html"> html-ejerc3.html </a></li>
+			</p>
+			<p>
+				<li><a href="ejercicios_HTML/html-ejerc4-listas.html"> html-ejerc4.html </a></li>
+			</p>
+			<p>
+				<li><a href="ejercicios_HTML/html-ejerc5-Práctica.html">html-ejerc5.html</a></li>
+			</p>
+			<p>
+				<li><a href="ejercicios_HTML/html-ejerc5-utf-8.html">html-ejerc5-utf-8.html</a></li>
+			</p>
+			<p>
+				<li><a href="ejercicios_HTML/html-ejerc6-img.html">html-ejerc6-img.html</a></li>
+			</p>
+			<p>
+				<li><a href="ejercicios_HTML/html-ejerc7-viaje.html">ejerc7-viaje.html</a></li>
+			</p>
+			</ul>
+		</div>
+
+		<h2> Web hosting </h2>
 		<p> <strong><em>Un web hosting </em></strong> es lo que en español se podría definir como alojamiento de una web, en el que todos los documentos alojados serán 
 		accesibles para cualquier usuario de la web en cualquier momento. Se podría decir que se alquila un espacio de un servidor, que almacena dichos documentos y datos
 		de tu web para que funciones perfectamente.</p>
  
 		<p> En mi caso he usado github (<a href="https://github.com"> github </a> ) y mi página web es: <a href="https://nahiarasanchez.github.io/"> Trabajo TICII </a></p>
+  
+ <div id="css"  class="titulo2"> <h2> Mis ejercicios de introducción CSS </h2>
 
+	<p><ul><li><a href="ejercicios_HTML/html-ejerc8-color.html"> html-ejerc8.html </a></li></p>
+
+	<p><li><a href="ejercicios_HTML/html-ejerc9-criatura.html"> html-ejerc9.html </a></li></p>
+
+	<p><li><a href="html-ejerc10-criatura2"> html-ejerc10.html </a></li></p>
+
+	<p><li><a href="html-ejerc11-formato"> html-ejerc11.html </a></li></p>
+
+	<p><li><a href="html-ejerc12-Olafshtml">html-ejerc12.html</a></li></p>
+
+	<p><li><a href="html-ejerc13-clases">html-ejerc13.html</a></li></p>
+
+	<p><li><a href="html-ejerc14-clases">html-ejerc14.html</a></li></p>
+
+
+	<p><li><a href="html-ejerc15-selectores">html-ejerc15.html</a></li></p>
+
+  <p><li><a href="html-ejerc16html">html-ejerc16.html</a></li></p></ul>
+
+  
+  
+ 
+
+
+ </div>
 </body>
 </html>
