--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 				nada que ver entre sí): Veterinaria, algo de diseño grafico/de interiores..., enfermería... Pero sí tengo claro de lo
 				que me gustaría trabajar después de haber estudiado: Policía especializada en la Brigada Canina, pues me encantaría poder
 				trabajar de la mano de mis mascotas.
+
+         <p> <img src="imagenes/jack_russell_terrier.jpg" alt="imágen-Jack-Russell-terrier" width="200" class="coco"></p>
 		</div>
 
 		<div id="html"  class="titulo2">
