--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
 
 <p><li><a href="js-ejerc03-operadores-binarioshtml"> js-ejerc03.html </a></li></p>
 
+<p><li><a href="js_ejerc04-operadores-binarios-logicos"> js-ejerc04.html </a></li></p>
+
   
 </ul>
 </div>
