--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 
 <p><li><a href="js_ejerc04-operadores-binarios-logicos"> js-ejerc04.html </a></li></p>
 
+<p><li><a href="js_ejerc05_cadenas"> js-ejerc05.html </a></li></p>
   
 </ul>
 </div>
