--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
 <p><li><a href="js_ejerc04-operadores-binarios-logicos"> js-ejerc04.html </a></li></p>
 
 <p><li><a href="js_ejerc05_cadenas"> js-ejerc05.html </a></li></p>
+
+<p><li><a href="js_ejerc06_condicionales"> js-ejerc06.html </a></li></p>
   
 </ul>
 </div>
