--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
 <p><li><a href="js_ejerc05_cadenas"> js-ejerc05.html </a></li></p>
 
 <p><li><a href="js_ejerc06_condicionales"> js-ejerc06.html </a></li></p>
+
+<p><li><a href="js_ejerc07_estructura_condicional"> js-ejerc07.html </a></li></p>
   
 </ul>
 </div>
