--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
 <p><li><a href="js_ejerc06_condicionales"> js-ejerc06.html </a></li></p>
 
 <p><li><a href="js_ejerc07_estructura_condicional"> js-ejerc07.html </a></li></p>
+
+<p><li><a href="js_ejerc08_condicionales_practica"> js-ejerc08.html </a></li></p>
   
 </ul>
 </div>
