--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
 <p><li><a href="js_ejerc07_estructura_condicional"> js-ejerc07.html </a></li></p>
 
 <p><li><a href="js_ejerc08_condicionales_practica"> js-ejerc08.html </a></li></p>
+
+<p><li><a href="examen_final"> examen_final.html </a></li></p>
   
 </ul>
 </div>
