--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				uno más de la familia. </p>
 
 			<p> Personalmente no tengo muy claro lo que me gustaría estudiar después, pero si tengo varias opciones (algunas no tienen
-				nada que ver entre sí): Veterinaria, algo de diseño grafico/de interiores..., enfermería... Pero sí tengo claro de lo
+				nada que ver entre sí): Veterinaria, algo de diseño grafico/de interiores..., enfermería.. Pero sí tengo claro de lo
 				que me gustaría trabajar después de haber estudiado: Policía especializada en la Brigada Canina, pues me encantaría poder
 				trabajar de la mano de mis mascotas.
 
