--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 <p><li><a href="js_ejerc08_condicionales_practica"> js-ejerc08.html </a></li></p>
 
-<p><li><a href="examen_final"> examen_final.html </a></li></p>
+<p><li><a href="https://examenfinalhtml.nahiarasanchez.repl.co"> examen_final.html </a></li></p>
   
 </ul>
 </div>
