--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="presentacion">
 			<h1> MI TRABAJO EN TICII + NAHIARA SÁNCHEZ GARCÍA </h1>
 
-			<p> Yo soy Nahiara Sánchez García y estoy cursando segundo de bachillerato en la clase 2.1, en la modalidad de ciencias
+			<p> Yo soy Nahiara Sánchez García y estoy cursando segundo de bachillerato en la clase 2.1 en la modalidad de ciencias
 				de la salud. Tengo dos hermanos pequeños, mi hermano tiene 14 años y está cursando tercero de la ESO, y mi hermanda tiene
 				11 y está en sexto de primaria, ambos en las Dominicas. Tenemos además un perrito llamado Coco, al que tratamos como
 				uno más de la familia. </p>
